--- a/Laba_2/style.css
+++ b/Laba_2/style.css
@@ -8,7 +8,7 @@ body { margin: 0; padding: 0; }
 .map-overlay {
     font: 12px/20px 'Helvetica Neue', Arial, Helvetica, sans-serif;
     position: absolute;
-    width: 25%;
+    width: 300px;
     top: 0;
     left: 0;
     padding: 10px;
@@ -29,12 +29,6 @@ body { margin: 0; padding: 0; }
     text-align: center;
 }
 
-.map-overlay .legend .bar {
-    height: 10px;
-    width: 100%;
-    background: linear-gradient(to right, #fca107, #7f3121);
-}
-
 .map-overlay input {
     background-color: transparent;
     display: inline-block;
@@ -42,4 +36,34 @@ body { margin: 0; padding: 0; }
     position: relative;
     margin: 0;
     cursor: ew-resize;
+}
+
+.transport-saved-stop-info{
+    background-color: #fff;
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
+    border-radius: 3px;
+}
+
+.transport-saved-stop-info:hover{
+    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.2);
+}
+
+.map-overlay-transport{
+    overflow: auto;
+    height: 30vmax;
+}
+
+.save-stop-button{
+    background-color: #fff;
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
+    border-radius: 3px;
+    margin: 0 auto;
+}
+
+.save-stop-button:hover{
+    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.2);
+}
+
+.popup-window{
+    text-align: center;
 }
